--- a/app/views/messages/new.erb
+++ b/app/views/messages/new.erb
@@ -1,6 +1,6 @@
 <h1>Post a Message</h1>
 
-<form>
+<form method="post" action="/messages">
   <div>
     <label>Author:</label>
     <input type="text" name="author">
